# bones

./: .botbox.json  .botbox.toml  .critignore  .edict.toml  .gitattributes  .gitignore  .maw.toml  AGENTS.md  CHANGELOG.md  CONVENTIONS.md  Cargo.toml  README.md  justfile
.beads/: issues.jsonl
.bones/events/: 2026-02.events  2026-02.manifest  2026-03.events  2026-03.manifest  2026-04.events  2026-04.manifest  2026-05.events
.claude/: settings.json
.crit/reviews/cr-1q06/: events.jsonl
.crit/reviews/cr-1q3t/: events.jsonl
.crit/reviews/cr-1v8j/: events.jsonl
.crit/reviews/cr-1wjo/: events.jsonl
.crit/reviews/cr-3tsm/: events.jsonl
.github/workflows/: benchmark-trends.yml  ci.yml  release.yml
benches/: ALLOCATORS.md  BASELINE.md  RELEASE_PROFILE.md
crates/bones-cli/: Cargo.toml  README.md
crates/bones-cli/benches/: tui_memory.rs  tui_ort_memory.rs  tui_render_memory.rs  tui_soak.sh
crates/bones-cli/src/: agent.rs  itc_state.rs  main.rs  output.rs  telemetry.rs  validate.rs
crates/bones-cli/src/cmd/: agents.rs  archive.rs  assign.rs  bones_gitattributes.rs  bones_gitignore.rs  close.rs  comment.rs  compact.rs  completions.rs  config.rs  context.rs  create.rs  cycles.rs  dedup.rs  delete.rs  dep.rs  diagnose.rs  do_cmd.rs  doctor.rs  done.rs  dup.rs  export.rs  feedback.rs  graph.rs  health.rs  import.rs  init.rs  labels.rs  list.rs  log.rs  migrate.rs  migrate_format.rs  mine.rs  mod.rs  move_cmd.rs  next.rs  plan.rs  progress.rs  rebuild.rs  redact_verify.rs  (+17 more)
crates/bones-cli/src/git/: hooks.rs  merge_driver.rs  mod.rs
crates/bones-cli/src/tui/: actions.rs  create_dialog.rs  list.rs  markdown.rs  mod.rs  search.rs  triage.rs
crates/bones-cli/src/tui/list/: data.rs  input.rs  mod.rs  render.rs  search.rs  state.rs  tests.rs
crates/bones-cli/tests/: e2e_chief_contract.rs  e2e_comments_labels_pagination.rs  e2e_deps.rs  e2e_extended.rs  e2e_lifecycle.rs  e2e_onboarding.rs  e2e_operational.rs  e2e_reporting.rs  e2e_safety.rs  e2e_triage.rs
crates/bones-core/: Cargo.toml  README.md
crates/bones-core/benches/: corpus.rs  large_repo.rs  operations.rs  report.rs
crates/bones-core/benches/support/: mod.rs
crates/bones-core/proptest-regressions/clock/: ops.txt
crates/bones-core/src/: alloc.rs  capabilities.rs  compact.rs  config.rs  error.rs  lib.rs  lock.rs  mmap.rs  recovery.rs  shard.rs  timing.rs  undo.rs  verify.rs
crates/bones-core/src/cache/: codec.rs  columns.rs  manager.rs  mod.rs  reader.rs  writer.rs
crates/bones-core/src/clock/: itc.rs  mod.rs  ops.rs  serde.rs  skew.rs  text.rs
crates/bones-core/src/crdt/: gset.rs  item_state.rs  lww.rs  merge.rs  mod.rs  orset.rs  state.rs  trace.rs
crates/bones-core/src/dag/: graph.rs  hash.rs  lca.rs  mod.rs  replay.rs
crates/bones-core/src/db/: fts.rs  incremental.rs  mod.rs  project.rs  query.rs  rebuild.rs  schema.rs
crates/bones-core/src/db/migrations/: mod.rs
crates/bones-core/src/event/: canonical.rs  data.rs  hash_text.rs  migrate.rs  mod.rs  parser.rs  types.rs  validate.rs  writer.rs
crates/bones-core/src/graph/: blocking.rs  cycles.rs  hierarchy.rs  mod.rs
crates/bones-core/src/model/: goal.rs  item.rs  item_id.rs  mod.rs
crates/bones-core/src/sync/: merge.rs  mod.rs  prolly.rs  protocol.rs
crates/bones-core/src/verify/: mod.rs  redact.rs
crates/bones-core/src/verify/verify/: redact.rs
crates/bones-core/tests/: convergence.rs  edge_cases.rs  fault_injection.rs  format_compat.rs  generators.rs  itc.rs  multi_repo.rs  prolly_sync.rs  proptest_semilattice.rs  replay_pipeline.rs  tsjson_parse.rs
crates/bones-core/tests/fixtures/: golden_events.tsjson  v1_events.events
crates/bones-search/: Cargo.toml  README.md
crates/bones-search/src/: duplicates.rs  lib.rs
crates/bones-search/src/fusion/: hybrid.rs  mod.rs  scoring.rs
crates/bones-search/src/semantic/: embed.rs  hash_embed.rs  mod.rs  model.rs  model2vec.rs  search.rs
crates/bones-search/src/structural/: mod.rs  similarity.rs
crates/bones-search/tests/: degradation.rs  gold_eval.rs  search_quality.rs
crates/bones-search/tests/fixtures/: gold_dataset.json
crates/bones-sim/: Cargo.toml  README.md
crates/bones-sim/src/: agent.rs  campaign.rs  clock.rs  lib.rs  network.rs  oracle.rs  rng.rs
crates/bones-sqlite-vec/: Cargo.toml  README.md
crates/bones-sqlite-vec/src/: lib.rs
crates/bones-triage/: Cargo.toml  README.md
crates/bones-triage/benches/: triage.rs
crates/bones-triage/src/: lib.rs
crates/bones-triage/src/feedback/: mod.rs  thompson.rs
crates/bones-triage/src/graph/: build.rs  critical_path.rs  cycles.rs  diagnostics.rs  mod.rs  normalize.rs  stats.rs
crates/bones-triage/src/metrics/: basic.rs  betweenness.rs  eigenvector.rs  hits.rs  mod.rs  pagerank.rs
crates/bones-triage/src/schedule/: fallback.rs  mod.rs  urgent_chain.rs  whittle.rs
crates/bones-triage/src/score/: composite.rs  mod.rs
crates/bones-triage/src/topology/: homology.rs  mod.rs  sparsify.rs
crates/bones-triage/tests/: composite_score.rs  graph_metrics.rs  pagerank.rs  pagerank_snapshot_bench.rs
docs/: binary-cache-format.md  contributor-guide.md  diagnose.md  performance-large-repo.md
docs/adr/: 001-item-id-generation.md  002-event-file-sharding.md  003-tsjson-format.md  004-itc-choice.md  005-eg-walker-dag.md  006-lww-tiebreaking.md  007-itc-sparse-base64-encoding.md  README.md
docs/spec/: chief-json-contract.md  compatibility.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: parse_line.rs  project_event.rs  replay_state.rs
notes/: cli-command-surface-map.md  plan.md  plan.review.1.md  plan.suggestions.1.md  pretty-output-audit-notes.md  sim-resilience-usage-plan.md
notes/original-convo/: 00-bones-design.md  00-start-convo.md  01-bones-advanced-research.md  02-bones-sqlite-search.md  03-bones-event-format.md  05-end-of-convo.md
scripts/: check_large_repo_slo.py  flamegraph.sh  generate-demo.sh
