[workspace]
resolver = "2"
members = [
    "crates/bones-core",
    "crates/bones-triage",
    "crates/bones-search",
    "crates/bones-cli",
    "crates/bones-sim",
]

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
unwrap_used = "deny"
unnecessary_wraps = "allow" # main returning anyhow::Result is common/desired

[workspace.dependencies]
anyhow = "1.0"
blake3 = "1.5"
chrono = "0.4"
clap = { version = "4.4", features = ["derive"] }
fs2 = "0.4"
proptest = "1.4"
rusqlite = { version = "0.30", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
thiserror = "1.0"
tracing-subscriber = "0.3"
tempfile = "3.10"
terseid = { git = "https://github.com/bobisme/terseid.git" }
