[workspace]
resolver = "2"
members = [
    "crates/bones-core",
    "crates/bones-triage",
    "crates/bones-search",
    "crates/bones-cli",
    "crates/bones-sim",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A CRDT-native issue tracker for distributed teams and AI agents"
repository = "https://github.com/bobisme/bones"

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
unwrap_used = "deny"
unnecessary_wraps = "allow" # main returning anyhow::Result is common/desired

[workspace.dependencies]
anyhow = "1.0"
blake3 = "1.5"
chrono = "0.4"
clap = { version = "4.4", features = ["derive"] }
fs2 = "0.4"
proptest = "1.4"
rusqlite = { version = "0.30", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
thiserror = "1.0"
tracing-subscriber = "0.3"
tempfile = "3.10"
terseid = { git = "https://github.com/bobisme/terseid.git" }
criterion = "0.5"
clap_complete = "4.5"
dirs = "5.0"
petgraph = "0.6"
rand = "0.8"
rand_distr = "0.4"
sha2 = "0.10"
toml = "0.8"
ratatui = "0.29"
crossterm = "0.28"
