[package]
name = "bones-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI binary for bones issue tracker"
repository.workspace = true

[[bin]]
name = "bn"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
blake3 = { workspace = true }
bones-core = { path = "../bones-core" }
bones-search = { path = "../bones-search", features = ["semantic-ort"] }
bones-sim = { path = "../bones-sim" }
bones-triage = { path = "../bones-triage" }
chrono = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
petgraph = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
terseid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
rand = { workspace = true }
ureq = { version = "2.10", features = ["json"] }
ratatui = { workspace = true }
crossterm = { workspace = true }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
serde_json = { workspace = true }
tempfile = { workspace = true }
