[package]
name = "bones-core"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
fs2 = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
terseid = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
