[package]
name = "bones-core"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
blake3 = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
fs2 = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
terseid = { workspace = true }
tracing = { workspace = true }
bumpalo = "3.20.2"
memmap2 = "0.9.10"

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "corpus"
harness = false

[[bench]]
name = "operations"
harness = false

[[bench]]
name = "report"
harness = false
