[package]
name = "bones-search"
version = "0.19.5"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Hybrid search (lexical BM25 + semantic embeddings + structural graph) for bones"
readme = "README.md"

[lints]
workspace = true

[features]
default = []
semantic-ort = ["dep:ort", "dep:tokenizers", "dep:ureq"]
bundled-model = ["semantic-ort"]

[dependencies]
bones-core = { path = "../bones-core", version = "0.19.5" }
anyhow = { workspace = true }
dirs = { workspace = true }
ort = { version = "2.0.0-rc.10", optional = true }
tokenizers = { version = "0.19", optional = true }
ureq = { version = "2.10", optional = true }
petgraph = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
terseid = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
