[package]
name = "bones-search"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Hybrid search (lexical BM25 + semantic embeddings + structural graph) for bones"
readme = "README.md"
include = ["src/**/*", "Cargo.toml", "README.md"]

[lints]
workspace = true

[features]
default = []
semantic-ort = ["dep:ort", "dep:tokenizers", "dep:ureq"]
semantic-model2vec = ["dep:safetensors", "dep:tokenizers", "dep:ureq"]
bundled-model = ["semantic-ort"]

[dependencies]
bones-core = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }
ort = { version = "2.0.0-rc.10", optional = true }
safetensors = { version = "0.4", optional = true }
tokenizers = { version = "0.19", optional = true }
ureq = { version = "2.10", optional = true }
petgraph = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
terseid = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
