[package]
name = "bones-sim"
version.workspace = true
edition = "2024"
license.workspace = true
description = "Deterministic simulation harness for bones"
repository.workspace = true

[lints]
workspace = true

[dependencies]
bones-core = { path = "../bones-core", version = "0.18.1" }
anyhow = { workspace = true }
proptest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
terseid = { workspace = true }
tracing = { workspace = true }
