[package]
name = "bones-sim"
version = "0.19.4"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Deterministic simulation harness for testing CRDT correctness in bones"
readme = "README.md"

[lints]
workspace = true

[dependencies]
bones-core = { path = "../bones-core", version = "0.19.4" }
anyhow = { workspace = true }
proptest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
terseid = { workspace = true }
tracing = { workspace = true }
