[package]
name = "bones-sim"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Deterministic simulation harness for testing CRDT correctness in bones"
readme = "README.md"

[lints]
workspace = true

[dependencies]
bones-core = { workspace = true }
anyhow = { workspace = true }
proptest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
terseid = { workspace = true }
tracing = { workspace = true }
