[package]
name = "bones-sqlite-vec"
version = "0.19.5"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "SQLite vector extension loader for semantic search in bones"
readme = "README.md"

[lints]
workspace = true

[dependencies]
rusqlite = { workspace = true }
sqlite-vec = { workspace = true }
