[package]
name = "bones-triage"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
bones-core = { path = "../bones-core" }
anyhow = { workspace = true }
blake3 = { workspace = true }
chrono = { workspace = true }
petgraph = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
terseid = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
bumpalo = "3.20.2"

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
