[package]
name = "bones-triage"
version = "0.19.5"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Prioritization and scoring engine for bones (PageRank, urgency, dependency-aware)"
readme = "README.md"

[lints]
workspace = true

[dependencies]
bones-core = { path = "../bones-core", version = "0.19.5" }
anyhow = { workspace = true }
blake3 = { workspace = true }
chrono = { workspace = true }
petgraph = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
nalgebra = "0.32"
terseid = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
bumpalo = "3.20.2"

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
